--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="time_empty">0</string>
     <string name="button_stop">STOP</string>
     <string name="button_start">START</string>
+    <string name="seconds">sec</string>
 </resources>
