Added: - improved start, stop, restart and resume functions with individual buttons, - make seek bar un editable when clock is ticking, - tick sound every second and bell sound on clock finish, - sounds from https://www.freesoundslibrary.com/.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="time_empty">0</string>
     <string name="button_stop">STOP</string>
     <string name="button_start">START</string>
+    <string name="button_resume">RESUME</string>
+    <string name="button_restart">RESTART</string>
     <string name="seconds">sec</string>
 </resources>
